dropdown image overflow corrected

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -32,6 +32,7 @@
   height: 200px;
   width: 100%;
   position: absolute;
+  overflow: hidden;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -60,10 +61,11 @@
   font-size: 44px;
   color: #15ad93;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: all 0.4s;
 
   &:hover {
-    transform: scale(1.1);
+    color: white;
+    transform: scaleX(1.1);
   }
 }
 
